5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1674_1100.log
== TEST (2019-04-25 10:56:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
	elif(x==5):
	y = "Garça"
	elif(x==10):
	y = "Arara"
	elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- ERROR:
File "XXXX", line 8
    elif(x==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
	elif(x==5):
		y = "Garça"
	elif(x==10):
		y = "Arara"
	elif(x==20):
		y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- ERROR:
File "XXXX", line 8
    elif(x==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
elif(x==50):
	y ="Onça-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
elif(x==50):
	y ="Onça-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
elif(x==50):
	y ="Onça-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garça"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leão-dourado"
elif(x==50):
	y ="Onça-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- EXECUTION TIME:
0.185389
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:06:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula:"))
#y = input("nome do animal:")
if(x==2):
	y = "Tartaruga"
elif(x==5):
	y = "Garca"
elif(x==10):
	y = "Arara"
elif(x==20):
	y = "Mico-leao-dourado"
elif(x==50):
	y ="Onca-pintada"
elif(x==100):
	y="Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:" , y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
